--- a/.env
+++ b/.env
@@ -1,3 +1,8 @@
 MONGO_URL="mongodb+srv://saheerk769:saheerk769@cluster0.g5hs36u.mongodb.net/AttendanceApp?retryWrites=true&w=majority&appName=Cluster0"
 PORT=3000
 SECRET_KEY=sjiiooqgoisjfoirajj
+
+
+
+EMAIL="saheerk902@gmail.com"
+EMAIL_PASSWORD="ibht odau jvol ynyx"
