--- a/.env
+++ b/.env
@@ -6,3 +6,6 @@ SECRET_KEY=sjiiooqgoisjfoirajj
 
 EMAIL="saheerk902@gmail.com"
 EMAIL_PASSWORD="ibht odau jvol ynyx"
+
+EMAIL_USER="saheerk902@gmail.com"
+EMAIL_PASS="ibht odau jvol ynyx"
